--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--PAGE LINKS-->
     <div class="tranNavBar">
-    <a href="index.html"><font size=30px;>E N T E R </a></font>
+    <a href="homePage.html"><font size=30px;>E N T E R </a></font>
 
   </head>
 
