--- a/homePage.html
+++ b/homePage.html
@@ -23,7 +23,7 @@
 <!--CONTENT-->
 <div class="bodyText"><br>
 <span><font size=30px><b>hello, world</b></span></font><br><br>
-<img src="C:\Users\H3lls3a\Dropbox\UK SPRING '18\WRD306\website\selfie2.png" width=340, align="right">
+<img src="https://imgur.com/yQS8mcw.png" width=340, align="right">
 <br>
   My name is <b>Chelsea</b> and I am an aspiring web developer, designer, and writer-of-all-trades based in Lexington, KY. I am currently pursuing a bachelor's degree in <b>Information Communication Technology</b> at the University of Kentucky. <br><br>My interest in code, design, and technology dates back to middle school, where I spent hours split between Photoshop and a live HTML editor - in short, I never grew out of my creative phase! I am dedicated to unique, interactive, and efficient UX/UI design. <br>My ultimate goal? <i>Never stop learning.</i> <br><br>
 
